<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindNote</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_string">Welcome to RemindNote</string>
    <string name="string_copy_right">copyright @ lgxace.com</string>
    <string name="no_notes">no notes</string>
    <string name="btn_txt_edit_note">modify note</string>
    <string name="btn_txt_cancel">cancel</string>
    <string name="btn_txt_ok">ok</string>
    <string name="remind_type_prompt">plsease select note type</string>
    <string name="note_alarm_settings_ok">TODO settings done.</string>
    <string name="note_alarm_msg">you have new task to do！</string>
    <string name="alarm_service_label">note remind alarm</string>
    <string name="string_todo_note_list_title">TODO list</string>
    <string name="string_note_list_title">note list</string>
    <string name="note_type_choice">plsease select note type</string>
    <string name="note_title">title</string>
    <string name="note_content">content</string>
    <string name="note_share_type_yes">share</string>
    <string name="note_share_type_no">not share</string>
    <string name="hint_input_note_title">please input note title</string>
    <string name="hint_input_note_content">please input note content</string>
    <string name="toast_note_title_null_or_error">note title null or error</string>
    <string name="todo_setting_title">TODO Settings</string>
    <string name="todo_setting_todo_date">date</string>
    <string name="todo_setting_todo_time">time</string>
    <string name="todo_setting_select_remind_type">please select reind type</string>
    <string name="todo_setting_done">TODO time settings done</string>
    <string name="hint_todo_setting_date">TODO date</string>
    <string name="hint_todo_setting_time">TODO time</string>
    <string name="note_item_author">author: </string>
    <string name="note_item_time">time: </string>
    <string name="note_item_share_state">share state: </string>
    <string name="note_item_share_state_yes">shared</string>
    <string name="note_item_share_state_no">not share</string>
    <string name="add_note_start_record">start recording</string>
    <string name="add_note_record_done">stop recording</string>
    <string name="toast_add_note_record_done">recorded</string>
    <string name="toast_add_note_record_going">recording...</string>
    <string name="toast_add_note_record_first">please record fisrt</string>
    <string name="toast_add_note_too_long_content">note content too long</string>
    <string name="toast_data_base_error">data base exception</string>
    <string name="toast_player_error">player error</string>
    <string name="toast_modify_note_done">modified</string>
    <string name="toast_file_operation_error">file operation error</string>
    <string name="builder_quit_title">sure to quit？</string>
    <string name="builder_quit_yes">Yes</string>
    <string name="builder_quit_no">No</string>
    <string name="add_note_select_note_type_title">please select note type</string>
<!--     <string name="add_note_select_note_type_text">文本 note</string>
    <string name="add_note_select_note_type_audio">语音 note</string>
    <string name="add_note_select_note_type_video">视频 note</string> -->

</resources>