<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="30dip"
    android:paddingLeft="9dip"
    android:paddingRight="9dip"
    android:paddingTop="41dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/note_title" />

        <EditText
            android:id="@+id/id_et_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:hint="@string/hint_input_note_title" 
            android:maxLength="20"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.4" >

        <LinearLayout
            android:id="@+id/ll_add_note_text_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top|center"
                android:text="@string/note_content" />

            <EditText
                android:id="@+id/id_et_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:gravity="top|left"
                android:hint="@string/hint_input_note_content"
                android:singleLine="false" 
                android:maxLength="200">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add_note_audio_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:src="@drawable/ic_audio_note"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add_note_video_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:visibility="gone" >

            <SurfaceView
                android:id="@+id/id_add_video_surfaceview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/id_add_note_share_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/id_rb_share_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:text="@string/note_share_type_yes" />

            <RadioButton
                android:id="@+id/id_rb_share_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/note_share_type_no" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/ll_add_media_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_id_add_media_note_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_update_user_bg"
                android:text="@string/add_note_start_record" />

            <Button
                android:id="@+id/btn_id_add_media_note_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_update_user_bg"
                android:text="@string/add_note_record_done" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_id_addnote_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_update_user_bg"
            android:text="@string/btn_txt_ok" />

        <Button
            android:id="@+id/btn_id_addnote_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_update_user_bg"
            android:text="@string/btn_txt_cancel" />
    </LinearLayout>

</LinearLayout>