<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <TextView
        android:id="@+id/welcom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/starting"
        android:layout_below="@id/welcom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_string"/>

    <ProgressBar
        android:id="@+id/pgbar_id__start"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/starting"
        android:maxWidth="100dp"
        android:progress="20" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pgbar_id__start"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:text="@string/string_copy_right" />

</RelativeLayout>