<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="30dip"
    android:paddingLeft="9dip"
    android:paddingRight="9dip"
    android:paddingTop="41dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="标题" />

        <EditText
            android:id="@+id/id_et_detailnote_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:enabled="false"
            android:gravity="center"
            android:hint="输入标题"
            android:textColor="@color/listitem_black"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.4" >

        <LinearLayout
            android:id="@+id/ll_note_detail_text_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top|center"
                android:text="内容" />

            <EditText
                android:id="@+id/id_et_detailnote_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:gravity="top|left"
                android:hint="输入笔记内容"
                android:singleLine="false" 
                android:enabled="false"
                android:textColor="@color/listitem_black">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_note_detail_audio_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/btn_note_detail_play_audio"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/audio_player"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_note_detail_video_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:visibility="gone" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <SurfaceView
                    android:id="@+id/id_show_video_surfaceview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/id_add_video_show"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/video_player"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/id_rb_notedetail_share_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:enabled="false"
                android:text="分享"
                android:textColor="@color/listitem_black" />

            <RadioButton
                android:id="@+id/id_rb_notedetail_share_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:enabled="false"
                android:text="不分享"
                android:textColor="@color/listitem_black" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/id_ll_editnote_yes"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <Button
                    android:id="@+id/btn_id_editnote_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_update_user_bg"
                    android:text="@string/btn_txt_ok" />

                <Button
                    android:id="@+id/btn_id_editnote_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_update_user_bg"
                    android:text="@string/btn_txt_cancel" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ll_editnote_no"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/id_ll_editnote_yes"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_id_edit_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_update_user_bg"
                    android:text="@string/btn_txt_edit_note" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>